# home

./: .Xresources  .bash_history  .bash_profile  .bashrc  .emacs.el  .emacs.el.bak  .emacs.el~  .gtk-bookmarks  .gtkrc-2.0  .viminfo  .vimrc  .vimrc.bak  .vimrc.darklooks  .xinitrc  .xmobarrc  README  README.md  ascii  connect2wifi  current  disconnect  fixdate  leksah.lkshs  leksah.lkshw  ping  tether  xterm
.emacs.d/: ecb.el  ecb.el~  haskell.el  haskell.el.bak  haskell.el~  tramp
.emacs.d/auto-save-list/: .saves-3571-lambda~  .saves-4966-lambda~
.emacs.d/elpa/ecb-20130826.1941/: #ecb-layout-defs.el#  ecb-advice-test.elc  ecb-analyse.elc  ecb-autogen.elc  ecb-autoloads.el  ecb-buffertab.elc  ecb-cedet-wrapper.elc  ecb-common-browser.elc  ecb-compatibility.elc  ecb-compilation.elc  ecb-create-layout.elc  ecb-cycle.elc  ecb-eshell.elc  ecb-examples.elc  ecb-face.elc  ecb-file-browser.elc  ecb-help.elc  ecb-jde.elc  ecb-layout-defs.elc  ecb-layout.elc  ecb-method-browser.elc  ecb-mode-line.elc  ecb-multiframe.elc  ecb-navigate.elc  ecb-pkg.elc  ecb-semantic-wrapper.elc  ecb-semantic.elc  ecb-speedbar.elc  ecb-symboldef.elc  ecb-tod.elc  ecb-upgrade.elc  ecb-util.elc  ecb-winman-support.elc  ecb.elc  silentcomp.elc  tree-buffer.elc
.emacs.d/elpa/flymake-easy-20130610.1705/: flymake-easy-autoloads.el  flymake-easy-pkg.elc  flymake-easy.elc
.emacs.d/elpa/haskell-mode-20130728.1338/: ghc-core.elc  haskell-align-imports.elc  (+29 more)
.emacs.d/eshell/: history  lastdir
.emacs.d/semanticdb/: !home!madjestic!Projects!CPP!OpenGL!Excercises!triangle_02!semantic.cache  !usr!include!bits!semantic.cache
.emacs.d/tutorial/: English.tut
.emacs.d/url/: cookies  cookies~
.vim/: .VimballRecord  .netrwhist
.vim/colors/: twilight.vim  twilight.vim.bak
.vim/doc/: tags
.xmonad/: xmonad.hi  xmonad.hs  xmonad.hs.bak
Projects/Haskell/: README  a.out  chromium
Projects/Haskell/Dump/: Dump.cabal
Projects/Haskell/Entropy/: Entropy.cabal  Entropy.cabal.bak  Entropy.cabal.bak.bak  Entropy.lkshs  Entropy.lkshw  TAGS  session.lkshs
Projects/Haskell/Entropy/src/: .Trees.hs.bak  Circles.hs  Main.hs  Main.hs.bak  Main.hs.orig  Query.hs  Trees.hs  Trees.hs.bak  Trees_ScanRight.hs  flycheck-Main.hs
Projects/Haskell/Entropy/src/archive/: Main.hs.21.08.2013  Trees.20.05.2013.hs  Trees.21.05.2013.hs  Trees.24.05.2013.hs  Trees.27.05.2013.hs
Projects/Haskell/Excercises/Random/: Random.cabal
Projects/Haskell/Excercises/Random/src/: Main.hs  Main1.hs  Main2.hs  Main3.hs  Main4.hs
Projects/Haskell/Scheme48h/: SimpleParser.cabal  scheme48h.lkshs  scheme48h.lkshw
Projects/Haskell/Scheme48h/src/: Main.hs
linux/: .config
portage/: package.accept_keywords  package.keywords.bak  package.license  package.use
(+210 files in other folders)
