name: Random
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable Random
    build-depends: QuickCheck -any, base -any, comonad -any,
                   random -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite test-Random
    build-depends: QuickCheck -any, base -any, comonad -any,
                   random -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src